[package]
name = "llrb-index"
version = "0.4.0"
authors = ["prataprc <prataprc@gmail.com>"]
edition = "2018"
description = "Left Leaning Red Black index"
documentation = "https://docs.rs/llrb-index"
homepage = "https://github.com/bnclabs/llrb-index"
repository = "https://github.com/bnclabs/llrb-index"
keywords = ["storage", "llrb", "sorting"]
categories = ["storage", "index"]
license = "AGPL-3.0"
exclude = ["template/**"]
readme = "README.md"

[dependencies]
rand = "0.6.4"

[dev-dependencies]
rand = "0.6.4"

[badges]
maintenance = { status = "actively-developed" }
travis-ci = { repository = "bnclabs/llrb-index" }
